# seabattlegame

./: .gitattributes  README.md
Classes/: Actor.cpp  Actor.hpp  AppDelegate.cpp  AppDelegate.h  AppMacros.h  BattleScene.cpp  BattleScene.hpp  GameOverScene.cpp  GameOverScene.hpp  HelloWorldScene.cpp  HelloWorldScene.h  LogoScene.cpp  LogoScene.h  MenuScene.cpp  MenuScene.h  PlacingShipsScene.cpp  PlacingShipsScene.h  Ship.cpp  Ship.hpp  Utils.cpp  Utils.hpp
Resources/Field/: tileMap_final.tmx
cocos2d/cocos/: CMakeLists.txt
cocos2d/cocos/2d/: CCNode.cpp
cocos2d/cocos/2d/Debug.win32/: libcocos2d.pch
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.ios_mac/ios/: Info.plist
proj.ios_mac/seabattlegame.xcodeproj/: CMakeLists.txt  project.pbxproj
proj.ios_mac/seabattlegame.xcodeproj/project.xcworkspace/xcuserdata/maksymbazala.xcuserdatad/: UserInterfaceState.xcuserstate
proj.ios_mac/seabattlegame.xcodeproj/xcshareddata/xcschemes/: seabattlegame-desktop.xcscheme
proj.ios_mac/seabattlegame.xcodeproj/xcuserdata/maksymbazala.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
proj.ios_mac/seabattlegame.xcodeproj/xcuserdata/maksymbazala.xcuserdatad/xcschemes/: xcschememanagement.plist
proj.win32/: seabattlegame.sln  seabattlegame.vcxproj  seabattlegame.vcxproj.filters
proj.win32/Debug.win32/: game.res  librecast.lib  seabattlegame.exp  seabattlegame.ilk  seabattlegame.lib  vc141.idb
proj.win32/Release.win32/: libSpine.lib  librecast.lib  seabattlegame.exp  seabattlegame.iobj  seabattlegame.ipdb  seabattlegame.lib
(+55 files in other folders)
